# Nin64-Emulator

./: .gitignore  CART.C  CPU.C  CPUC.C  DLIST.C  HW.C  MEM.C  OS.C  PATCH.C  RDP.C  README.md  SYM.C  SYNC.C  TIMER.C  X.H  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_port.c  jni_bridge.c  x_soft.c
app/src/main/cpp/compat/: commctrl.h  console.h  dsound.h  mmsystem.h  os.h  oscall.h  osignore.h  ospatch.h  port_compat.h  rdp.h  resource.h  sound.h  stdsdk.h  timer.h  ultra.h  windows.h  windowsx.h  x.h
app/src/main/cpp/libretro_bridge/: jni_bridge_libretro.c
app/src/main/java/com/izzy2lost/nin64/: AdsController.kt  AppOpenAdManager.kt  CheatManagerActivity.kt  ControlsConfig.kt  CoverMatcher.kt  DisplayOptions.kt  GameActivity.kt  GameControlSettingsActivity.kt  GameDisplaySettingsActivity.kt  GamepadMappingActivity.kt  MainActivity.kt  NativeAdPlacement.kt  NativeBridge.kt  Nin64Application.kt  NoAdsPurchaseManager.kt  SettingsActivity.kt  TouchControlsView.kt  TouchLayoutActivity.kt
app/src/main/res/drawable/: bg_game_options_dialog.xml  bg_game_options_row.xml  bg_native_ad_badge.xml  bg_native_ad_container.xml  bg_native_ad_media.xml  bg_settings_chip_blue.xml  bg_settings_chip_green.xml  bg_settings_chip_yellow.xml  ic_cheats.xml  ic_display.xml  ic_folder.xml  ic_image.xml  ic_memory.xml  ic_save.xml  ic_videogame.xml  ic_view_grid.xml  ic_view_list.xml  noadslogodk.xml  noadslogolt.xml
app/src/main/res/layout/: activity_game_control_settings.xml  activity_game_display_settings.xml  activity_main.xml  activity_settings.xml  dialog_game_options.xml  dialog_texture_pack_progress.xml  item_game_option_action.xml  item_rom_grid.xml  list_item_rom.xml  view_native_banner_ad.xml
app/src/main/res/values/: arrays.xml  colors.xml  drawables.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  drawables.xml
app/src/test/java/com/izzy2lost/nin64/: ControlsConfigTest.kt
scripts/: build_mupen64plus_next_android.sh  build_release_aab.sh
